--- a/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
@@ -42,7 +42,60 @@
             </div>
         </nav>
     </header>
-<main></main>
+<main>
+    <section class="container" style="top: 170px; position: relative;">
+        <div class="row g-3">
+            <div class="col-md-4 mt-4">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Users</h5>
+                        <p class="card-text fs-1 text-center">8</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Total Bookings</h5>
+                        <p class="card-text fs-1 text-center">8</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Available Cars</h5>
+                        <p class="card-text fs-1 text-center">8</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Reserved Cars</h5>
+                        <p class="card-text fs-1 text-center">8</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Available Drivers</h5>
+                        <p class="card-text fs-1 text-center">8</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Occupied Drivers</h5>
+                        <p class="card-text fs-1 text-center">8</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
 </body>
