--- a/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Customer Details</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Payment</a>
+                        </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <button class="btn btn-outline-dark">Log Out</button>
