--- a/EasyReantalCarSystem_FrontEnd/pages/adminCarManage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminCarManage.html
@@ -119,18 +119,18 @@
                         <option>No</option>
                     </select>
                 </div>
-                <div class="form-group text-right col-md-4 mt-5">
-                    <button class="btn btn-success col-12 col-sm-auto" id="btnAddToCarTable" type="button">
-                        Add
-                    </button>
-                    <button class="btn btn-warning col-12 col-sm-auto" id="btnCarUpdate" type="button">
-                        Update
-                    </button>
-                    <button class="btn btn-danger col-12 col-sm-auto" id="btnCarDelete" type="button">
-                        Delete
-                    </button>
-                </div>
             </form>
+            <div class="btn-group text-right col-md-4 mt-3">
+                <button class="btn btn-success col-12 col-sm-auto" id="btnAddToCarTable" type="button">
+                    Add
+                </button>
+                <button class="btn btn-warning col-12 col-sm-auto" id="btnCarUpdate" type="button">
+                    Update
+                </button>
+                <button class="btn btn-danger col-12 col-sm-auto" id="btnCarDelete" type="button">
+                    Delete
+                </button>
+            </div>
         </div>
     </div>
 </section>
